# VerifyImportAI

./: .gitignore  AGENTS.md  README.md  SpecOps_Backlog_Tickets.md  SpecOps_Data_Schema.md  SpecOps_Evaluation_KPI.md  SpecOps_Framework.md  SpecOps_Implementation_Plan.md  SpecOps_Integration_Codebeamer.md  SpecOps_MVP_Implementation_Roadmap.md  SpecOps_P0_Engineering_Assignment.md  SpecOps_P0_Jira_Tickets.md  SpecOps_Privacy_Audit_Policy.md  SpecOps_Prompt_Strategy.md  SpecOps_SQLite_Relational_Schema.md  SpecOps_Solution_Automotive.md  SpecOps_State_Machine.md  SpecOps_Technical_Specs.md  SpecOps_UX_Workflow.md  main.py  pyproject.toml
Kawasaki/全体要件/: 全体要件.md  全体要件_content_list_v2.json
Triumph/S6867_07/: S6867_07.md  S6867_07_content_list_v2.json
fixtures/: README.md  real_spec_assets.json
fixtures/generation_cases/: diagnostic_timeout_case.json  door_lock_feedback_case.json  metric_speed_display_case.json
fixtures/parser_sections/: diagnostic_session_timeout.json  door_lock_feedback.json  vehicle_speed_display.json
openapi/: README.md  specops-api.yaml
openapi/examples/: export.request.json  (+13 more)
schemas/: audit_rationale.schema.json  note.schema.json  requirement.schema.json  requirement_output.example.json  review_record.schema.json  spec_section.schema.json  test_requirement.schema.json  trace_map.schema.json
specops_api/: app.py  models.py  pipeline.py  repository.py  sqlite_repository_relational.py  store.py
tests/: test_api_smoke.py  test_generation_fixtures.py  test_parser_fixtures.py  test_real_spec_pipeline.py  test_review_regression_fixtures.py
(+2 files in other folders)
